// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-exit 1`] = `[]`;

exports[`default renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-stderr 1`] = `[]`;

exports[`default renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will execute and not quit on errors.
",
  "[2K[1A[2K[G[2m◼[22m This task will execute and not quit on errors.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [2m◼[22m This is a subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [33m❯[39m This is a subtask.
  [2m◼[22m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m This is a subtask.
  [2m◼[22m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [2m◼[22m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [33m❯[39m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m This is an another subtask.
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [2m◼[22m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [33m❯[39m This is yet an another subtask.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [33m❯[39m I have succeeded.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[33m❯[39m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[31m✖[39m This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[31m✖[39m I will exit on error since I am a direct child of parent task.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  "[33m⚠[39m This task will execute and not quit on errors.
  [31m✖[39m I have failed [0]
  [31m✖[39m I have failed [1]
  [32m✔[39m I have succeeded.
[31m✖[39m I will exit on error since I am a direct child of parent task.
",
  "[?25h",
]
`;

exports[`default renderer: error handling should contain errors from failed tasks: H2KTg7q5F1kWMtrPFdOERVSZc3UT2IsM 1`] = `
[
  [ListrError: I have failed [0]],
  [ListrError: I have failed [1]],
  [ListrError: I will exit on error since I am a direct child of parent task.],
]
`;

exports[`default renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-exit 1`] = `[]`;

exports[`default renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stderr 1`] = `[]`;

exports[`default renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will fail.
",
  "[2K[1A[2K[G[2m◼[22m This task will fail.
[2m◼[22m This task will maybe execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will fail.
[2m◼[22m This task will maybe execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task will fail.
[31m◼[39m This task will maybe execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task failed after 2 seconds.
[31m◼[39m This task will maybe execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task failed after 2 seconds.
[31m◼[39m I will change my title if this executes.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task failed after 2 seconds.
[32m✔[39m I will change my title if this executes.
",
  "[2K[1A[2K[1A[2K[G",
  "[31m✖[39m This task failed after 2 seconds.
[32m✔[39m I will change my title if this executes.
",
  "[?25h",
]
`;

exports[`default renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-exit 1`] = `[]`;

exports[`default renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stderr 1`] = `[]`;

exports[`default renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will fail.
",
  "[2K[1A[2K[G[2m◼[22m This task will fail.
[2m◼[22m This task will maybe execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will fail.
[2m◼[22m This task will maybe execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task will fail.
[31m◼[39m This task will maybe execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task failed after 2 seconds.
[31m◼[39m This task will maybe execute.
",
  "[2K[1A[2K[1A[2K[G",
  "[31m✖[39m This task failed after 2 seconds.
[31m◼[39m This task will maybe execute.
",
  "[?25h",
]
`;

exports[`default renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-exit 1`] = `[]`;

exports[`default renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-stderr 1`] = `[]`;

exports[`default renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will fail.
",
  "[2K[1A[2K[G[2m◼[22m This task will fail.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will fail.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task will fail.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task failed after 2 seconds.
[2m◼[22m This task will execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task failed after 2 seconds.
[33m❯[39m This task will execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task failed after 2 seconds.
[33m❯[39m I will change my title if this executes.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task failed after 2 seconds.
[32m✔[39m I will change my title if this executes.
",
  "[2K[1A[2K[1A[2K[G",
  "[31m✖[39m This task failed after 2 seconds.
[32m✔[39m I will change my title if this executes.
",
  "[?25h",
]
`;

exports[`default renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-exit 1`] = `[]`;

exports[`default renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-stderr 1`] = `[]`;

exports[`default renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-stdout 1`] = `
[
  "[?25l",
  "[2m◼[22m This task will fail.
",
  "[2K[1A[2K[G[2m◼[22m This task will fail.
[2m◼[22m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[33m❯[39m This task will fail.
[2m◼[22m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task will fail.
[31m◼[39m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G[31m✖[39m This task failed after 2 seconds.
[31m◼[39m This task will never execute.
",
  "[2K[1A[2K[1A[2K[G",
  "[31m✖[39m This task failed after 2 seconds.
[31m◼[39m This task will never execute.
",
  "[?25h",
]
`;

exports[`simple renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-exit 1`] = `[]`;

exports[`simple renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-stderr 1`] = `
[
  "[31m✖[39m This is a subtask. [31m[FAILED: I have failed [0]][39m
",
  "[31m✖[39m This is an another subtask. [31m[FAILED: I have failed [1]][39m
",
  "[31m✖[39m This task will execute. [31m[FAILED: I will exit on error since I am a direct child of parent task.][39m
",
]
`;

exports[`simple renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-stdout 1`] = `
[
  "[33m❯[39m This task will execute and not quit on errors.
",
  "[33m❯[39m This is a subtask.
",
  "[33m❯[39m This is an another subtask.
",
  "[33m❯[39m This is yet an another subtask.
",
  "[32m✔[39m I have succeeded.
",
  "[32m✔[39m This task will execute and not quit on errors.
",
  "[33m❯[39m This task will execute.
",
]
`;

exports[`simple renderer: error handling should contain errors from failed tasks: H2KTg7q5F1kWMtrPFdOERVSZc3UT2IsM 1`] = `
[
  [ListrError: I have failed [0]],
  [ListrError: I have failed [1]],
  [ListrError: I will exit on error since I am a direct child of parent task.],
]
`;

exports[`simple renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-exit 1`] = `[]`;

exports[`simple renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stderr 1`] = `
[
  "[31m✖[39m This task will fail. [31m[FAILED: This task failed after 2 seconds.][39m
",
]
`;

exports[`simple renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stdout 1`] = `
[
  "[33m❯[39m This task will fail.
",
  "[33m❯[39m This task will maybe execute.
",
  "[32m✔[39m I will change my title if this executes.
",
]
`;

exports[`simple renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-exit 1`] = `[]`;

exports[`simple renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stderr 1`] = `
[
  "[31m✖[39m This task will fail. [31m[FAILED: This task failed after 2 seconds.][39m
",
]
`;

exports[`simple renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stdout 1`] = `
[
  "[33m❯[39m This task will fail.
",
]
`;

exports[`simple renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-exit 1`] = `[]`;

exports[`simple renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-stderr 1`] = `
[
  "[31m✖[39m This task will fail. [31m[FAILED: This task failed after 2 seconds.][39m
",
]
`;

exports[`simple renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-stdout 1`] = `
[
  "[33m❯[39m This task will fail.
",
  "[33m❯[39m This task will execute.
",
  "[32m✔[39m I will change my title if this executes.
",
]
`;

exports[`simple renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-exit 1`] = `[]`;

exports[`simple renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-stderr 1`] = `
[
  "[31m✖[39m This task will fail. [31m[FAILED: This task failed after 2 seconds.][39m
",
]
`;

exports[`simple renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-stdout 1`] = `
[
  "[33m❯[39m This task will fail.
",
]
`;

exports[`test renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-exit 1`] = `[]`;

exports[`test renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-stderr 1`] = `
[
  "{"event":"MESSAGE","data":{"error":"I have failed [0]"},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is a subtask."]}}
",
  "{"event":"MESSAGE","data":{"error":"I have failed [1]"},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is an another subtask."]}}
",
  "{"event":"MESSAGE","data":{"error":"I will exit on error since I am a direct child of parent task."},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`test renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute and not quit on errors.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is a subtask."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is a subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is a subtask."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is an another subtask."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This is an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is an another subtask."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This is yet an another subtask.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is yet an another subtask."]}}
",
  "{"event":"TITLE","data":"I have succeeded.","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"I have succeeded.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is yet an another subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"I have succeeded.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors.","This is yet an another subtask."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":true,"title":"This task will execute and not quit on errors.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute and not quit on errors."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`test renderer: error handling should contain errors from failed tasks: H2KTg7q5F1kWMtrPFdOERVSZc3UT2IsM 1`] = `
[
  [ListrError: I have failed [0]],
  [ListrError: I have failed [1]],
  [ListrError: I will exit on error since I am a direct child of parent task.],
]
`;

exports[`test renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-exit 1`] = `[]`;

exports[`test renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stderr 1`] = `
[
  "{"event":"MESSAGE","data":{"error":"This task failed after 2 seconds."},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
]
`;

exports[`test renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will maybe execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will maybe execute."]}}
",
  "{"event":"TITLE","data":"I will change my title if this executes.","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"I will change my title if this executes.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will maybe execute."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"I will change my title if this executes.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will maybe execute."]}}
",
]
`;

exports[`test renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-exit 1`] = `[]`;

exports[`test renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stderr 1`] = `
[
  "{"event":"MESSAGE","data":{"error":"This task failed after 2 seconds."},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
]
`;

exports[`test renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
]
`;

exports[`test renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-exit 1`] = `[]`;

exports[`test renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-stderr 1`] = `
[
  "{"event":"MESSAGE","data":{"error":"This task failed after 2 seconds."},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
]
`;

exports[`test renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"TITLE","data":"I will change my title if this executes.","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"I will change my title if this executes.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"I will change my title if this executes.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`test renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-exit 1`] = `[]`;

exports[`test renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-stderr 1`] = `
[
  "{"event":"MESSAGE","data":{"error":"This task failed after 2 seconds."},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
]
`;

exports[`test renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will fail.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will fail."]}}
",
]
`;

exports[`verbose renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-exit 1`] = `[]`;

exports[`verbose renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-stderr 1`] = `
[
  "[31m[FAILED][39m I have failed [0]
",
  "[31m[FAILED][39m I have failed [1]
",
  "[31m[FAILED][39m I will exit on error since I am a direct child of parent task.
",
]
`;

exports[`verbose renderer: error handling should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-stdout 1`] = `
[
  "[33m[STARTED][39m This task will execute and not quit on errors.
",
  "[33m[STARTED][39m This is a subtask.
",
  "[33m[STARTED][39m This is an another subtask.
",
  "[33m[STARTED][39m This is yet an another subtask.
",
  "[TITLE] I have succeeded.
",
  "[32m[COMPLETED][39m I have succeeded.
",
  "[32m[COMPLETED][39m This task will execute and not quit on errors.
",
  "[33m[STARTED][39m This task will execute.
",
]
`;

exports[`verbose renderer: error handling should contain errors from failed tasks: H2KTg7q5F1kWMtrPFdOERVSZc3UT2IsM 1`] = `
[
  [ListrError: I have failed [0]],
  [ListrError: I have failed [1]],
  [ListrError: I will exit on error since I am a direct child of parent task.],
]
`;

exports[`verbose renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-exit 1`] = `[]`;

exports[`verbose renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stderr 1`] = `
[
  "[31m[FAILED][39m This task failed after 2 seconds.
",
]
`;

exports[`verbose renderer: error handling should disable exitOnError from task level while: false: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stdout 1`] = `
[
  "[33m[STARTED][39m This task will fail.
",
  "[33m[STARTED][39m This task will maybe execute.
",
  "[TITLE] I will change my title if this executes.
",
  "[32m[COMPLETED][39m I will change my title if this executes.
",
]
`;

exports[`verbose renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-exit 1`] = `[]`;

exports[`verbose renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stderr 1`] = `
[
  "[31m[FAILED][39m This task failed after 2 seconds.
",
]
`;

exports[`verbose renderer: error handling should disable exitOnError from task level while: true: Y9ADBbD3GX6P6HIKGTdeHybvNK4OPw37-stdout 1`] = `
[
  "[33m[STARTED][39m This task will fail.
",
]
`;

exports[`verbose renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-exit 1`] = `[]`;

exports[`verbose renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-stderr 1`] = `
[
  "[31m[FAILED][39m This task failed after 2 seconds.
",
]
`;

exports[`verbose renderer: error handling should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-stdout 1`] = `
[
  "[33m[STARTED][39m This task will fail.
",
  "[33m[STARTED][39m This task will execute.
",
  "[TITLE] I will change my title if this executes.
",
  "[32m[COMPLETED][39m I will change my title if this executes.
",
]
`;

exports[`verbose renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-exit 1`] = `[]`;

exports[`verbose renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-stderr 1`] = `
[
  "[31m[FAILED][39m This task failed after 2 seconds.
",
]
`;

exports[`verbose renderer: error handling should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-stdout 1`] = `
[
  "[33m[STARTED][39m This task will fail.
",
]
`;
